--- a/Module4/module4-sample-code.ipynb
+++ b/Module4/module4-sample-code.ipynb
@@ -4635,6 +4635,223 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tempdf = pd.read_csv('GlobalLandTemperaturesByCity.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tempdf = tempdf[tempdf['City'] == \"New York\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tempdf = tempdf.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dt</th>\n",
+       "      <th>AverageTemperature</th>\n",
+       "      <th>AverageTemperatureUncertainty</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1743-11-01</td>\n",
+       "      <td>3.264</td>\n",
+       "      <td>1.665</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>40.99N</td>\n",
+       "      <td>74.56W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1743-12-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>40.99N</td>\n",
+       "      <td>74.56W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1744-01-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>40.99N</td>\n",
+       "      <td>74.56W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1744-02-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>40.99N</td>\n",
+       "      <td>74.56W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1744-03-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>40.99N</td>\n",
+       "      <td>74.56W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3234</th>\n",
+       "      <td>2013-05-01</td>\n",
+       "      <td>15.544</td>\n",
+       "      <td>0.281</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>40.99N</td>\n",
+       "      <td>74.56W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3235</th>\n",
+       "      <td>2013-06-01</td>\n",
+       "      <td>20.892</td>\n",
+       "      <td>0.273</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>40.99N</td>\n",
+       "      <td>74.56W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3236</th>\n",
+       "      <td>2013-07-01</td>\n",
+       "      <td>24.722</td>\n",
+       "      <td>0.279</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>40.99N</td>\n",
+       "      <td>74.56W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3237</th>\n",
+       "      <td>2013-08-01</td>\n",
+       "      <td>21.001</td>\n",
+       "      <td>0.323</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>40.99N</td>\n",
+       "      <td>74.56W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3238</th>\n",
+       "      <td>2013-09-01</td>\n",
+       "      <td>17.408</td>\n",
+       "      <td>1.048</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>40.99N</td>\n",
+       "      <td>74.56W</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3239 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              dt  AverageTemperature  AverageTemperatureUncertainty      City  \\\n",
+       "0     1743-11-01               3.264                          1.665  New York   \n",
+       "1     1743-12-01                 NaN                            NaN  New York   \n",
+       "2     1744-01-01                 NaN                            NaN  New York   \n",
+       "3     1744-02-01                 NaN                            NaN  New York   \n",
+       "4     1744-03-01                 NaN                            NaN  New York   \n",
+       "...          ...                 ...                            ...       ...   \n",
+       "3234  2013-05-01              15.544                          0.281  New York   \n",
+       "3235  2013-06-01              20.892                          0.273  New York   \n",
+       "3236  2013-07-01              24.722                          0.279  New York   \n",
+       "3237  2013-08-01              21.001                          0.323  New York   \n",
+       "3238  2013-09-01              17.408                          1.048  New York   \n",
+       "\n",
+       "            Country Latitude Longitude  \n",
+       "0     United States   40.99N    74.56W  \n",
+       "1     United States   40.99N    74.56W  \n",
+       "2     United States   40.99N    74.56W  \n",
+       "3     United States   40.99N    74.56W  \n",
+       "4     United States   40.99N    74.56W  \n",
+       "...             ...      ...       ...  \n",
+       "3234  United States   40.99N    74.56W  \n",
+       "3235  United States   40.99N    74.56W  \n",
+       "3236  United States   40.99N    74.56W  \n",
+       "3237  United States   40.99N    74.56W  \n",
+       "3238  United States   40.99N    74.56W  \n",
+       "\n",
+       "[3239 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tempdf"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
