uploads final tidying files

--- a/FinalProject/Creating jsons for D3/data608_finalproj.ipynb
+++ b/FinalProject/Creating jsons for D3/data608_finalproj.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('C:/Users/zalexander/Desktop/countries.geo.json') as f:\n",
+    "with open('countries.geo.json') as f:\n",
     "    gj = geojson.load(f)\n",
     "features = gj['features']"
    ]
@@ -56,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "climate = pd.read_excel('C:/Users/zalexander/Desktop/climate_change_projections2.xlsx')\n",
+    "climate = pd.read_excel('climate_change_projections.xlsx')\n",
     "climate = climate.rename(columns= {\"ISO_3DIGIT\": \"Country\", \"Value\": \"Change_c\", \"Timeperiod_Variable_month_scenario_ensemble\": \"Timeperiod\"})"
    ]
   },
